check role cho sidebar

--- a/scc-mvc/src/main/resources/templates/SideBar.html
+++ b/scc-mvc/src/main/resources/templates/SideBar.html
@@ -31,105 +31,137 @@
                 <!--</ul>-->
             <!--</li>-->
             <!--Customer Care -->
-            <li class="header" style="text-align: center">CUSTOMER CARE SERVICE</li>
-            <li class="treeview">
-                <a href="/customercare">
-                    <i class="fa fa-user-md"></i>
-                    <span>Customer Care</span>
-                    <span class="pull-right-container">
-                            <i class="fa fa-angle-left pull-right"></i>
-                    </span>
-                </a>
-            <li class="treeview">
-                <a href="/messenger">
-                    <i class="fa fa-comments-o"></i>
-                    <span>Messenger</span>
-                    <span class="pull-right-container">
-                            <i class="fa fa-angle-left pull-right"></i>
-                    </span>
-                </a>
-            </li>
-
-
-            <!--Manage Ticket-->
-            <li class="treeview">
-                <a href="/manageticket">
-                    <i class="fa fa-tasks"></i>
-                    <span>Manage Ticket</span>
-                    <span class="pull-right-container">
-                            <i class="fa fa-angle-left pull-right"></i>
-                    </span>
-                </a>
-            </li>
-
-            <li class="header" style="text-align: center">FACEBOOK PAGE & ACCOUNT</li>
-            <!--Manage Page -->
-            <li class="treeview">
-                <a href="/page/index">
-                    <i class="fa fa-facebook-official "></i>
-                    <span>Manage Page</span>
-                    <span class="pull-right-container">
-                            <i class="fa fa-angle-left pull-right"></i>
-                    </span>
-                </a>
-            </li>
-            <!--Manage Page -->
-            <li class="treeview">
-                <a href="/crawl-page/index">
-                    <i class="fa fa-bug"></i>
-                    <span>Manage Crawl Page</span>
-                    <span class="pull-right-container">
-      <i class="fa fa-angle-left pull-right"></i>
-                    </span>
-                </a>
-            </li>
-            <!--Manage FaceBook Account -->
-            <li class="treeview">
-                <a href="/facebook-account/index">
-                    <i class="fa fa-facebook"></i>
-                    <span>Manage Account</span>
-                    <span class="pull-right-container">
-                            <i class="fa fa-angle-left pull-right"></i>
-                    </span>
-                </a>
-            </li>
 
 
 
-            <li class="header" style="text-align: center">BRAND INFORMATION</li>
-            <!--Manage Brand -->
-            <li class="treeview">
-                <a href="/brand/index">
-                    <i class="fa fa-globe"></i>
-                    <span>Your Brand</span>
-                    <span class="pull-right-container">
-                            <i class="fa fa-angle-left pull-right"></i>
-                    </span>
-                </a>
-            </li>
-            <!--Manage Brand -->
-            <li class="treeview">
-                <a href="/brand/user">
-                    <i class="fa fa-users"></i>
-                    <span>User Management</span>
-                    <span class="pull-right-container">
-                            <i class="fa fa-angle-left pull-right"></i>
-                    </span>
-                </a>
-            </li>
-            <!--View Report -->
-            <li class="treeview">
-                <a href="/brand/report">
-                    <i class="fa fa-line-chart"></i>
-                    <span>Report</span>
-                    <span class="pull-right-container">
-                            <i class="fa fa-angle-left pull-right"></i>
-                    </span>
-                </a>
-            </li>
+
+
+
+
         </ul>
     </section>
     <!-- /.sidebar -->
+
+    <script>
+        var CustomerCareBar=
+                '<li class="header" style="text-align: center">CUSTOMER CARE SERVICE</li>'
+                +'<li class="treeview ">'
+                +'        <a href="/customercare" >'
+                +'        <i class="fa fa-user-md "></i>'
+                +'        <span >Customer Care</span>'
+                +'<span class="pull-right-container ">'
+                +'        <i class="fa fa-angle-left pull-right "></i>'
+                +'        </span>'
+                +'        </a>'
+                +'        </li>'
+                +'       <li class="treeview ">'
+                +'      <a href="/messenger" >'
+                +'      <i class="fa fa-comments-o "></i>'
+                +'      <span >Messenger</span>'
+                +'      <span class="pull-right-container">'
+                +'      <i class="fa fa-angle-left pull-right"></i>'
+                +'      </span>'
+                +'      </a>'
+                +'      </li>'
+                +'       <li class="treeview">'
+                +'      <a href="/manageticket">'
+                +'      <i class="fa fa-tasks"></i>'
+                +'      <span>Manage Ticket</span>'
+                +'<span class="pull-right-container">'
+                +'      <i class="fa fa-angle-left pull-right"></i>'
+                +'      </span>'
+                +'      </a>'
+                +'      </li>'
+
+
+
+        var FaceBookBar=
+                '<li class="header" style="text-align: center">FACEBOOK PAGE & ACCOUNT</li>'
+                +'<!--Manage Page -->'
+                +'<li class="treeview">'
+                +'      <a href="/page/index">'
+                +'      <i class="fa fa-facebook-official "></i>'
+                +'      <span>Manage Page</span>'
+                +'<span class="pull-right-container">'
+                +'      <i class="fa fa-angle-left pull-right"></i>'
+                +'      </span>'
+                +'      </a>'
+                +'      </li>'
+                +'      <!--Manage Page -->'
+                +'      <li class="treeview">'
+                +'      <a href="/crawl-page/index">'
+                +'      <i class="fa fa-bug"></i>'
+                +'      <span>Manage Crawl Page</span>'
+                +'<span class="pull-right-container">'
+                +'      <i class="fa fa-angle-left pull-right"></i>'
+                +'      </span>'
+                +'      </a>'
+                +'      </li>'
+                +'      <!--Manage FaceBook Account -->'
+                +'      <li class="treeview">'
+                +'      <a href="/facebook-account/index">'
+                +'      <i class="fa fa-facebook"></i>'
+                +'      <span>Manage Account</span>'
+                +'<span class="pull-right-container">'
+                +'      <i class="fa fa-angle-left pull-right"></i>'
+                +'      </span>'
+                +'      </a>'
+                +'      </li>'
+
+
+
+        var BrandBar=
+                '<li class="header" style="text-align: center">BRAND INFORMATION</li>'
+                +'<!--Manage Brand -->'
+                +'<li class="treeview">'
+                +'      <a href="/brand/index">'
+                +'      <i class="fa fa-globe"></i>'
+                +'      <span>Your Brand</span>'
+                +'<span class="pull-right-container">'
+                +'      <i class="fa fa-angle-left pull-right"></i>'
+                +'      </span>'
+                +'      </a>'
+                +'      </li>'
+                +'      <!--Manage Brand -->'
+                +'      <li class="treeview">'
+                +'      <a href="/brand/user">'
+                +'      <i class="fa fa-users"></i>'
+                +'      <span>User Management</span>'
+                +'<span class="pull-right-container">'
+                +'      <i class="fa fa-angle-left pull-right"></i>'
+                +'      </span>'
+                +'      </a>'
+                +'      </li>'
+                +'      <!--View Report -->'
+                +'      <li class="treeview">'
+                +'      <a href="/brand/report">'
+                +'      <i class="fa fa-line-chart"></i>'
+                +'      <span>Report</span>'
+                +'      <span class="pull-right-container">'
+                +'      <i class="fa fa-angle-left pull-right"></i>'
+                +'      </span>'
+                +'      </a>'
+                +'      </li>'
+
+
+        checkuserrole()
+        function checkuserrole() {
+            $.ajax({
+                url:"/getcurrentuser",
+                type:"GET",
+                success:function (data) {
+                    if(data.roleid==4){
+                        $(".sidebar-menu").html(CustomerCareBar);
+                    }else if(data.roleid==3){
+                        $(".sidebar-menu").html(CustomerCareBar + FaceBookBar);
+                    }else if(data.roleid==2){
+                        $(".sidebar-menu").html(CustomerCareBar + FaceBookBar + BrandBar);
+                    }
+                }
+            })
+
+        }
+    </script>
 </aside>
 </body>
 
