link to ticket, link to messenger

--- a/scc-mvc/src/main/resources/templates/messenger/index.html
+++ b/scc-mvc/src/main/resources/templates/messenger/index.html
@@ -283,7 +283,7 @@
                         <h1 class="customer-username text-center">Ticket</h1>
                         <ul class="list-group list-group-unbordered">
                             <li class="list-group-item" style="text-align: center">
-                                <a id="ticket-name-link" href="" style="text-align: center" target="_blank"><b id="ticket-name">Select a message to see it's ticket</b></a>
+                                <a id="ticket-name-link" href="#" style="text-align: center" target=""><b id="ticket-name">Select a message to see it's ticket</b></a>
                             </li>
                             <li class="list-group-item">
                                 <b>Assigner</b> <a id="ticket-assigner" class="pull-right"></a>
