--- a/scc-mvc/src/main/resources/templates/messenger/mini-messenger.html
+++ b/scc-mvc/src/main/resources/templates/messenger/mini-messenger.html
@@ -3,7 +3,7 @@
 <div class="header">
     <i id="back-button" style="margin: 3px 0px 0px 10px" onclick="getAllActivePageUnreadMessage()" class="fa fa-arrow-left pull-left" aria-hidden="true"></i>
     <span class="fa fa-weixin"></span>
-    Social Messenger</div>
+    <a href="messenger">Social Messenger</a></div>
 
 
 <div id="mess-page-list" class="collapse">
