--- a/scc-mvc/src/main/resources/templates/Head.html
+++ b/scc-mvc/src/main/resources/templates/Head.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/font-awesome-4.6.3/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="/css/AdminLTE.min.css"/>
     <link rel="stylesheet" href="/css/_all-skins.min.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="/js/jquery-2.2.3.min.js"></script>
     <script src="/js/jquery-ui.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/app.min.js"></script>
@@ -90,31 +90,31 @@
 
                 <!--This is notification dropdown-->
 
-                <li class="dropdown tasks-menu">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <i class="fa fa-bell"></i>
-                        <span id="unread_count" class="label label-danger">9</span>
-                    </a>
-                    <ul class="dropdown-menu" style=" box-shadow: 5px 5px 5px #888888;">
-                        <li class="header"><b>Notification</b></li>
-                        <li>
-                            <ul class="menu" id="noti-list">
-                                <li>
-                                    <a href="#">
-                                        <h3>
-                                            You have a new ticket from <b>Mr.Boss</b>
-                                            <p class="pull right"><span class="fa fa-ticket" style="margin-right: 5px"></span>5 mins ago</p>
-                                        </h3>
-                                    </a>
-                                </li>
+                <!--<li class="dropdown tasks-menu">-->
+                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
+                        <!--<i class="fa fa-bell"></i>-->
+                        <!--<span id="unread_count" class="label label-danger">9</span>-->
+                    <!--</a>-->
+                    <!--<ul class="dropdown-menu" style=" box-shadow: 5px 5px 5px #888888;">-->
+                        <!--<li class="header"><b>Notification</b></li>-->
+                        <!--<li>-->
+                            <!--<ul class="menu" id="noti-list">-->
+                                <!--<li>-->
+                                    <!--<a href="#">-->
+                                        <!--<h3>-->
+                                            <!--You have a new ticket from <b>Mr.Boss</b>-->
+                                            <!--<p class="pull right"><span class="fa fa-ticket" style="margin-right: 5px"></span>5 mins ago</p>-->
+                                        <!--</h3>-->
+                                    <!--</a>-->
+                                <!--</li>-->
 
-                            </ul>
-                        </li>
-                        <li class="footer">
-                            <a href="#">View all tasks</a>
-                        </li>
-                    </ul>
-                </li>
+                            <!--</ul>-->
+                        <!--</li>-->
+                        <!--<li class="footer">-->
+                            <!--<a href="#">View all tasks</a>-->
+                        <!--</li>-->
+                    <!--</ul>-->
+                <!--</li>-->
                 <li class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <span class="hidden-xs" th:text="${session.fullname}"></span>
