--- a/scc-mvc/src/main/resources/templates/user/index.html
+++ b/scc-mvc/src/main/resources/templates/user/index.html
@@ -5,6 +5,7 @@
     <title>Brand infomation</title>
     <header class="main-header" th:include="Head::header"></header>
     <aside class="main-sidebar" th:include="SideBar::aside"></aside>
+    <script src="/js/Chart.bundle.js"></script>
     <style>
         .active {
             color: #00c200;
@@ -19,6 +20,16 @@
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
 <script>
+    var days = new Array();
+    var curr = new Date; // get current date
+    var first = curr.getDate() - curr.getDay() -6;
+
+    for(var i = 1;i<=7;i++){
+        var next = new Date(curr.getTime());
+        next.setDate(first + i);
+        days.push(next.getDate()+"/"+next.getMonth());
+    }
+
     function getUserDetail(userId) {
         $.ajax({
             url: '/user/getUserDetail',
@@ -207,37 +218,44 @@
         </div>
     </section>
     <div id="userDetailModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-lg">
 
             <!-- Modal content-->
-            <div class="modal-dialog modal-sm">
-                <div class="modal-content ">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title">User detail</h4>
                     </div>
                     <div class="modal-body">
+                        <div class="row">
+                            <div class="col-lg-3">
+                                <div style="font-size: 30px; font-weight: bold; color: cornflowerblue;text-align: center"
+                                     id="user-name">
+                                </div>
 
-                        <div style="font-size: 30px; font-weight: bold; color: cornflowerblue;text-align: center"
-                             id="user-name">
-                        </div>
+                                <div style="text-align: center">
+                                    <span class="fa fa-circle" id="user-status"></span>
+                                    <span id="user-role"></span>
+                                </div>
 
-                        <div style="text-align: center">
-                            <span class="fa fa-circle" id="user-status"></span>
-                            <span id="user-role"></span>
-                        </div>
+                                <hr>
+                                <div><span class="glyphicon glyphicon-user" style="margin-right: 10px"></span><span
+                                        id="user-username">quybeans</span></div>
+                                <div><span class="glyphicon glyphicon-earphone" style="margin-right: 10px"></span><span
+                                        id="user-phone">08.09021028</span></div>
+                                <div><span class="glyphicon glyphicon-envelope" style="margin-right: 10px"></span><span
+                                        id="user-mail">quybeans@gmail.com</span>
+                                </div>
+                                <div><span class="glyphicon glyphicon-map-marker"
+                                           style="margin-right: 10px"></span><span
+                                        id="user-location">64 Phạm Văn Bạch, Quận Tân Bình TPHCM</span>
 
-                        <hr>
-                        <div><span class="glyphicon glyphicon-user" style="margin-right: 10px"></span><span
-                                id="user-username">quybeans</span></div>
-                        <div><span class="glyphicon glyphicon-earphone" style="margin-right: 10px"></span><span
-                                id="user-phone">08.09021028</span></div>
-                        <div><span class="glyphicon glyphicon-envelope" style="margin-right: 10px"></span><span
-                                id="user-mail">quybeans@gmail.com</span>
-                        </div>
-                        <div><span class="glyphicon glyphicon-map-marker" style="margin-right: 10px"></span><span
-                                id="user-location">64 Phạm Văn Bạch, Quận Tân Bình TPHCM</span>
-
+                                </div>
+                            </div>
+                            <div class="col-lg-9"  style="border-left: 1px solid lightgray">
+                                <canvas id="barchart"></canvas>
+                            </div>
                         </div>
                     </div>
                     <div class="modal-footer">
@@ -363,5 +381,54 @@
         </div>
     </div>
 </div>
+
+<script>
+    var commentColor='#808080';
+    var ticketColor = '#48a4d1';
+    var ctx = document.getElementById("barchart").getContext('2d');
+    var myChart = new Chart(ctx, {
+        type: 'bar',
+        data: {
+            labels: days,
+            datasets: [{
+                label: '# of comment made',
+                data: [12, 19, 3, 5, 2, 3],
+                backgroundColor: [
+                    commentColor,
+                    commentColor,
+                    commentColor,
+                    commentColor,
+                    commentColor,
+                    commentColor
+                ],
+
+                borderWidth: 1
+            },{
+                label: '# of ticket close',
+                data: [15, 12, 2, 0, 1, 3],
+                backgroundColor: [
+                    ticketColor,
+                    ticketColor,
+                    ticketColor,
+                    ticketColor,
+                    ticketColor,
+                    ticketColor,
+                    ticketColor,
+                ],
+
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        beginAtZero:true
+                    }
+                }]
+            }
+        }
+    });
+</script>
 </body>
 </html>
