--- a/scc-mvc/src/main/resources/templates/messenger/index.html
+++ b/scc-mvc/src/main/resources/templates/messenger/index.html
@@ -54,6 +54,45 @@
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title">Tickets in the system</h4>
+                        <div class="inline">
+                            <div class="inline">Sort by :</div>
+                            <div class=" inline" style="margin-right: 10px">
+
+                                <label><input name="radiobtn"  type="radio" id="tksttcheckbox" >
+                                    Status</label>
+                            </div>
+                            <div class=" inline" style="margin-right: 10px">
+                                <label><input name="radiobtn" type="radio" id="tktimecheckbox" >Time</label>
+                            </div>
+
+                            <div >
+                                Status:
+                                <select id="filterstatus">
+                                    <option></option>
+                                    <option value="1">
+                                        Assigned
+                                    </option>
+                                    <option value="2">InProcess</option>
+                                    <option value="3">Solved</option>
+                                    <option value="4">Close</option>
+                                    <option value="5">Expired</option>
+                                </select>
+                                Priority:
+                                <select id="filterpriority">
+                                    <option></option>
+                                </select>
+                                Created by:
+                                <select id="filtercreatedby">
+                                    <option></option>
+                                </select>
+                                Assignee:
+                                <select id="filterassignee">
+                                    <option></option>
+                                </select>
+                                <button class="btn btn-default" onclick="filterticket()" ><i class="fa fa-filter"></i>Filter</button>
+                            </div>
+
+                        </div>
                     </div>
                     <div class="modal-body" id="ticket-list">
                         <div class="ticket-row">
@@ -89,14 +128,12 @@
                                 <div class="title solved">
                                     Galaxy Note 7 phát nổ cần được tư vấn đổi trả
                                 </div>
-                                <div style="color: gray">Status: <span class="fa fa-circle"
-                                                                       style="color: gray"></span>
+                                <div style="color: gray">Status: <span class="fa fa-circle" style="color: gray"></span>
                                     Solved
                                 </div>
                                 <div style="color: gray">Created by:<span
                                         style="color: black; font-weight: bold">User</span></div>
-                                <div style="color: gray">Current assignee:<span
-                                        style="color: black; font-weight: bold">Admin</span>
+                                <div style="color: gray">Current assignee:<span style="color: black; font-weight: bold">Admin</span>
                                 </div>
                                 <div></div>
                             </div>
@@ -109,8 +146,7 @@
                                 </div>
                                 <div style="color: gray">Created by:<span
                                         style="color: black; font-weight: bold">User</span></div>
-                                <div style="color: gray">Current assignee:<span
-                                        style="color: black; font-weight: bold">QuyDV</span>
+                                <div style="color: gray">Current assignee:<span style="color: black; font-weight: bold">QuyDV</span>
                                 </div>
                                 <div></div>
                             </div>
@@ -125,8 +161,7 @@
                                 </div>
                                 <div style="color: gray">Created by:<span
                                         style="color: black; font-weight: bold">User</span></div>
-                                <div style="color: gray">Current assignee:<span
-                                        style="color: black; font-weight: bold">Admin</span>
+                                <div style="color: gray">Current assignee:<span style="color: black; font-weight: bold">Admin</span>
                                 </div>
                                 <div></div>
                             </div>
@@ -134,14 +169,12 @@
                                 <div class="title solved">
                                     Galaxy Note 7 phát nổ cần được tư vấn đổi trả
                                 </div>
-                                <div style="color: gray">Status: <span class="fa fa-circle"
-                                                                       style="color: gray"></span>
+                                <div style="color: gray">Status: <span class="fa fa-circle" style="color: gray"></span>
                                     Solved
                                 </div>
                                 <div style="color: gray">Created by:<span
                                         style="color: black; font-weight: bold">User</span></div>
-                                <div style="color: gray">Current assignee:<span
-                                        style="color: black; font-weight: bold">Admin</span>
+                                <div style="color: gray">Current assignee:<span style="color: black; font-weight: bold">Admin</span>
                                 </div>
                                 <div></div>
                             </div>
@@ -154,8 +187,7 @@
                                 </div>
                                 <div style="color: gray">Created by:<span
                                         style="color: black; font-weight: bold">User</span></div>
-                                <div style="color: gray">Current assignee:<span
-                                        style="color: black; font-weight: bold">QuyDV</span>
+                                <div style="color: gray">Current assignee:<span style="color: black; font-weight: bold">QuyDV</span>
                                 </div>
                                 <div></div>
                             </div>
