--- a/scc-mvc/src/main/resources/templates/customercare.html
+++ b/scc-mvc/src/main/resources/templates/customercare.html
@@ -28,7 +28,7 @@
                     </div>
                     <div class="modal-body" style=" height: auto;">
 
-                        <div id="reply-list" class="cmtList" style="max-height: 45vh; overflow-y: scroll;">
+                        <div id="reply-list" class="cmtList" style="max-height: 45vh; overflow-y: auto; border-bottom: none">
 
                         </div>
                         <input type="hidden" id="reply-token" value="">
