--- a/scc-mvc/src/main/resources/templates/user/index.html
+++ b/scc-mvc/src/main/resources/templates/user/index.html
@@ -284,6 +284,8 @@
                     </div>
 
                     <div class="modal-body">
+                        <input type="hidden" class="form-control" name="ddlBrand" value="">
+                        <input type="hidden" class="form-control" name="rdrPage" value="/brand/user">
                         <div class="form-group">
                             <label class="control-label col-sm-3" for="username">Username*</label>
                             <div class="col-sm-9">
