--- a/scc-mvc/src/main/resources/templates/admin/index.html
+++ b/scc-mvc/src/main/resources/templates/admin/index.html
@@ -95,7 +95,7 @@
                                 '</div>'
                         );
 
-                        $("#brand-list-newuser").append('<option value="sup">'+data[index].name+'</option>');
+                        $("#brand-list-newuser").append('<option value="'+data[index].id+'">'+data[index].name+'</option>');
                     });
                     $("#brand-body").append(
                             '<div  data-toggle="modal" data-target="#brand-info-modal" style="height: 90px;" class="brand-item col-lg-6">' +
@@ -229,6 +229,7 @@
         <!-- Modal content-->
         <div class="modal-content">
             <form class="form-horizontal" action="/user/createUserwProfile" method="POST">
+                <input type="hidden" class="form-control" name="rdrPage" value="/admin/index">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title">Add new user</h4>
@@ -254,7 +255,7 @@
                                 <!--<span class="caret"></span></button>-->
                                 <!--<input type="hidden" class="form-control" id="txtRole"-->
                                 <!--name="txtRole">-->
-                                <select class="btn btn-default" id="brand-list-newuser" name="ddlRole">
+                                <select class="btn btn-default" id="brand-list-newuser" name="ddlBrand">
 
                                 </select>
                             </div>
@@ -270,6 +271,7 @@
                                 <!--<input type="hidden" class="form-control" id="txtRole"-->
                                 <!--name="txtRole">-->
                                 <select class="btn btn-default" name="ddlRole">
+                                    <option value="brand">Brand manager</option>
                                     <option value="sup">Supervisor</option>
                                     <option value="staff">Staff</option>
                                 </select>
