--- a/scc-mvc/src/main/resources/static/css/messenger.css
+++ b/scc-mvc/src/main/resources/static/css/messenger.css
@@ -92,7 +92,7 @@
 .chat li.right .chat-body {
     padding: 5px 5px 5px 10px;
     margin-right: 10px;
-    background-color: lightblue;
+    background-color: #bae8ed;
     border-radius: 5px;
     max-width: 75%;
     min-width: 33%;
@@ -104,7 +104,7 @@
 
 .chat li .chat-body p {
     margin: 0;
-    color: #777777;
+    color: #000000;
 }
 
 .panel .slidedown .glyphicon, .chat .glyphicon {
@@ -208,10 +208,10 @@
     background-color: #F2F2F2;
 }
 
-#post-box .active {
-    background-color: lightskyblue;
-    color: black;
-}
+/*#post-box .active {*/
+    /*background-color: lightskyblue;*/
+    /*color: black;*/
+/*}*/
 
 .chat .item:before,
 .chat .item:after {
@@ -442,10 +442,10 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 
-.active {
-    background-color: lightskyblue;
-    color: black;
-}
+/*.active {*/
+    /*background-color: lightskyblue;*/
+    /*color: black;*/
+/*}*/
 
 .header-customer-name {
     border-bottom: 1px solid lightgray;
@@ -463,4 +463,21 @@ input[type=number]::-webkit-outer-spin-button {
     display:inline-block;
     width:100%;
     height:100%;
+}
+
+.sender-chat-content{
+    color: black;
+}
+
+#customer-button{
+    cursor: pointer;
+}
+
+#ticket-button{
+    cursor: pointer;
+    width: 110px;
+}
+
+#ticket-button a{
+    text-align: center;
 }
