Thêm note vào messenger

--- a/scc-mvc/src/main/resources/templates/crawl-page/index.html
+++ b/scc-mvc/src/main/resources/templates/crawl-page/index.html
@@ -197,7 +197,7 @@
             },
             dataType: "text",
             success: function (data) {
-                alert(data);
+                location.reload();
             },
             error: function (data) {
                 alert("Invalid link");
