sửa lại add ticket item

--- a/scc-mvc/src/main/resources/templates/manageticket.html
+++ b/scc-mvc/src/main/resources/templates/manageticket.html
@@ -186,7 +186,7 @@
                         </div>
                         <div class="modal-body">
                             <div class="form group">
-                                <label for="newticketname">Name</label>
+                                <label for="newticketname">Title</label>
                                 <input spellcheck="false" type="text" class="form-control" id="newticketname"/>
                             </div>
                             <div class="form group">
