--- a/scc-mvc/src/main/resources/templates/messenger/index.html
+++ b/scc-mvc/src/main/resources/templates/messenger/index.html
@@ -250,7 +250,7 @@
 
             <!--Cot o giua. Noi dung chat-->
             <div class="col-md-6 cmtbox" id="conversation"
-                 style=" background-color: inherit; overflow: hidden; border-right: 1px solid lightgray">
+                 style=" background-color: inherit; border-right: 1px solid lightgray">
 
                 <div class="header-customer-name">
                     <div id="currentSenderName">Teen</div>
@@ -273,7 +273,7 @@
             </div>
 
             <!--Cot ben phai. Thong tin cua khach hang-->
-            <div class="col-md-3" id="customer-info" style="background-color: white; height: 92vh">
+            <div class="col-md-3" id="customer-info" style="background-color: white; height: 95vh">
 
 
                 <div class="container">
@@ -310,8 +310,8 @@
                             <p id="p-customer-note"><a id="customer-note"></a> <span onclick="showEditNoteForm()" class="fa fa-pencil-square-o" title="Edit this note" style="cursor: pointer; margin-left: 10px"></span></p>
                             <div id="edit-note-div" style="display: none">
                                 <textarea id="customer-note-edit" rows="3" cols="35" name="comment" class="form form-control" maxlength="200"></textarea>
-                                <button onclick="saveNote()" id="customer-note-edit-button" class="btn btn-primary pull-right" >Save</button>
                                 <button onclick="hideEditNoteForm()" id="" class="btn btn-warning pull-right" >Cancel</button>
+                                <button onclick="saveNote()" id="customer-note-edit-button" class="btn btn-primary pull-right" >Save</button>
                             </div>
 
                         </ul>
