--- a/scc-mvc/src/main/resources/templates/messenger/mini-messenger.html
+++ b/scc-mvc/src/main/resources/templates/messenger/mini-messenger.html
@@ -20,7 +20,7 @@
     </div>
 </div>
 
-<div id="chat-box" class="collapse" style="overflow: scroll; height: 84vh">
+<div id="chat-box" class="collapse" style="overflow: auto; height: 88vh">
 
 </div>
 
