--- a/scc-mvc/src/main/resources/templates/page/index.html
+++ b/scc-mvc/src/main/resources/templates/page/index.html
@@ -7,6 +7,11 @@
     <aside class="main-sidebar" th:include="SideBar::aside"> </aside>
     <link rel="stylesheet" href="/css/page.css">
 
+    <!--test-->
+    <link rel="stylesheet" href="/css/jquery-ui.css">
+    <link rel="stylesheet" href="/css/popup-confirm.css">
+    <script src="/js/jquery-ui.js"></script>
+
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper">
@@ -50,12 +55,16 @@
                                 <span  th:case="false"><span class="fa fa fa-circle inactive"></span>Inactive</span>
                             </td>
                             <td th:switch="${page.active}">
-                                <button class="btn btn-danger" type="submit" name="btnAction" id="btnDeactive"
+                                <button class="btn btn-warning" type="submit" name="btnAction" id="btnDeactive"
                                         value="Deactivate"
                                         th:case="true">Deactivate
                                 </button>
+
                                 <button class="btn btn-primary" type="submit" name="btnAction" value="Activate"
                                         th:case="false">Activate
+                                </button>
+                                <button class="btn btn-danger" type="button" name="btnAction" id="btnDelete" onclick="showConfirm(this);"
+                                        th:value="${page.pageid}">Delete
                                 </button>
                             </td>
                         </form>
@@ -148,6 +157,13 @@
 
 </div>
 
+
+
+
+<!--tesst-->
+<div id="dialog-confirm" title="Delete this page?" style="display: none">
+    <p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>This page will be permanently deleted and cannot be recovered. Are you sure?</p>
+</div>
 </body>
 </html>
 <script>
@@ -269,6 +285,43 @@
         $('#page-form-type').text('toggle');
         $('#page-detail-modal').modal('toggle');
 
+    }
+
+    function showConfirm(element) {
+//        $('#btnDelete').click(function( event ) {
+//            event.preventDefault();
+//        });
+//        element.preventDefault();
+
+        $( function() {
+            $( "#dialog-confirm" ).dialog({
+                resizable: false,
+                height: "auto",
+                width: 400,
+                modal: true,
+                buttons: {
+                    "Delete": function() {
+                        $.ajax({
+                            url: '/page/deactivatePage',
+                            type: "POST",
+                            dataType: "json",
+                            data: {
+                                pageId: element.value,
+                                btnAction: 'Delete'
+                            },
+                            success: function (data) {
+
+                            }
+                        });
+                        $( this ).dialog( "close" );
+                        location.reload();
+                    },
+                    Cancel: function() {
+                        $( this ).dialog( "close" );
+                    }
+                }
+            });
+        } );
     }
 
 </script>
